--- a/src/App.css
+++ b/src/App.css
@@ -1,19 +1,5 @@
 @import url('https://fonts.googleapis.com/css2?family=Almarai&display=swap');
-/* 
-* {
 
-  box-sizing: border-box !important;
-}
-
-body,
-html {
-  font-family: 'Almarai', sans-serif !important;
-  padding: 0px !important;
-  margin: 0px !important;
-  overflow-x: hidden !important;
-}
-
- */
 
 html, body {
   overflow-x: hidden !important;
@@ -26,5 +12,5 @@ html, body {
 
 * {
   box-sizing: border-box !important;
-  max-width: 100vw !important; /* يمنع أي عنصر يتجاوز عرض الشاشة */
+  max-width: 100vw !important;
 }
