--- a/src/components/Navbar/Navbar.css
+++ b/src/components/Navbar/Navbar.css
@@ -10,7 +10,7 @@
 }
 
 .navbar {
-  /* background-color: #000032; */
+  
   background-color: rgba(0, 0, 0, -0.4) !important;
   display: flex !important;
   justify-content: space-between !important;
@@ -62,7 +62,7 @@ svg{
 }
 
 .close-btn {
-  display: none; /* الافتراضي مخفي */
+  display: none; 
 }
 
 @media (max-width: 768px) {
@@ -73,7 +73,6 @@ svg{
 
     position: fixed;
     top: 0;
-    /* right: -100%; */
     left: -100%;
     height: 100%;
     width: 250px;
@@ -88,9 +87,8 @@ svg{
     left: 0;
   }
    .close-btn {
-    display: block; /* يظهر بس في الموبايل */
-    align-self: start; /* يخليه في الركن اليمين جوة القائمة */
-    /* margin: 20px; */
+    display: block; 
+    align-self: start;
     margin-bottom: 20px;
   }
    .nav-links {
